name:                haskell-webservice-tutorial
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-webservice-tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@freiheit.com
copyright:           BSD3
category:            Tutorial
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable haskell-webservice-tutorial-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-webservice-tutorial
  default-language:    Haskell2010

test-suite haskell-webservice-tutorial-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-webservice-tutorial
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-webservice-tutorial
